[gd_scene load_steps=11 format=2]

[ext_resource path="res://TS_DEMO (Update 01)/TS_DEMO (Update 01)/Factions/Knights/Knight_House-sheet.png" type="Texture" id=1]
[ext_resource path="res://HouseController.gd" type="Script" id=2]
[ext_resource path="res://TS_DEMO (Update 01)/TS_DEMO (Update 01)/Factions/Knights/life outline.png" type="Texture" id=3]
[ext_resource path="res://TS_DEMO (Update 01)/TS_DEMO (Update 01)/Factions/Knights/life fill.png" type="Texture" id=4]
[ext_resource path="res://TS_DEMO (Update 01)/TS_DEMO (Update 01)/Factions/Knights/shadow.png" type="Texture" id=5]
[ext_resource path="res://TS_DEMO (Update 01)/TS_DEMO (Update 01)/Factions/Knights/border2.png" type="Texture" id=6]
[ext_resource path="res://TS_DEMO (Update 01)/buttons.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 62.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.5, 47 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 93.75, 54.5 )

[node name="House" type="KinematicBody2D" groups=["Interectable"]]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -74.0
margin_top = -236.0
margin_right = 76.0
margin_bottom = 9.0
flat = true

[node name="LifeBar" type="Node2D" parent="."]
position = Vector2( 0, 148 )
scale = Vector2( 2, 2 )

[node name="Shadow" type="TextureRect" parent="LifeBar"]
margin_left = -48.0
margin_top = -177.0
margin_right = 48.0
margin_bottom = -137.0
texture = ExtResource( 5 )

[node name="Fill" type="TextureProgress" parent="LifeBar"]
margin_left = -31.0
margin_top = -172.0
margin_right = 31.0
margin_bottom = -139.0
texture_progress = ExtResource( 4 )

[node name="Border" type="TextureRect" parent="LifeBar"]
margin_left = -48.0
margin_top = -177.0
margin_right = 48.0
margin_bottom = -137.0
texture = ExtResource( 3 )

[node name="KnightHouse" type="Sprite" parent="."]
position = Vector2( 1, -76 )
texture = ExtResource( 1 )
hframes = 2
region_rect = Rect2( 0, 0, 384, 192 )

[node name="Collisions" type="StaticBody2D" parent="." groups=["Interectable"]]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -17 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -24 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -35 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -46 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -55 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -64 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -74 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -83 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, -91 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0.5, -52 )
shape = SubResource( 2 )

[node name="ToolMenu" type="Node2D" parent="." groups=["Interectable"]]
visible = false

[node name="Area2D" type="Area2D" parent="ToolMenu" groups=["Interectable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolMenu/Area2D"]
position = Vector2( -4.75, -192.5 )
shape = SubResource( 3 )

[node name="Border2" type="Sprite" parent="ToolMenu" groups=["Interectable"]]
position = Vector2( 0, -175 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="RepairButton" type="Node2D" parent="ToolMenu" groups=["Interectable"]]
position = Vector2( -45, -197 )
scale = Vector2( 1.5, 1.5 )

[node name="Button" type="Button" parent="ToolMenu/RepairButton" groups=["Interectable"]]
margin_left = -30.0
margin_top = -23.0
margin_right = 2.0
margin_bottom = 9.0
flat = true

[node name="Buttons" type="Sprite" parent="ToolMenu/RepairButton/Button" groups=["Interectable"]]
position = Vector2( 16, 16 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 16, 16, 32, 32 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="button_down" from="ToolMenu/RepairButton/Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="ToolMenu/RepairButton/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="ToolMenu/RepairButton/Button" to="." method="_on_Button_mouse_exited"]
